kubernetes_yaml_files/network_policy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
   - Egress
# ingress:
# - from:
#   - ipBlock:
#       cidr: 172.17.0.0/16
#       except:
#       - 172.17.1.0/24
#   - namespaceSelector:
#       matchLabels:
#         project: myproject
#   - podSelector:
#       matchLabels:
#         role: frontend
#   ports:
#   - protocol: TCP
#     port: 6379
  egress:
  - to:
    - podSelector:
       matchLabels:
         name: payroll
      ports:
      - protocol: TCP
        port: 8080
  - to:
    - podSelector:
       matchLabels:
         name: db
      ports:
      - protocol: TCP
        port: 3306
